Bug#50196 ndb_mgm REPORT MEMORY shows 2 Index memory status lines when using ndbmtd  - additionl fix to cope with differing 'qsort' implementations(it's not    supposed to be stable, but some seem to be), we really    want to DataMemery lines to go before IndexMemory so do an   extra compare of source_nodeid is equal